--- a/index_caracteristicas.html
+++ b/index_caracteristicas.html
@@ -208,8 +208,8 @@
         <h4>Redes:</h4>
         <ul>
             <li><a href="https://www.instagram.com/ivantsrv/" target="_blank">Instagram</a></li>
-            <li><a href="https://www.linkedin.com/in/iv%C3%A1n-ravarotto-54199a218/">LinkedIn</a></li>
-            <li><a href="https://github.com/RavarottoIvan">GitHub</a></li>
+            <li><a href="https://www.linkedin.com/in/iv%C3%A1n-ravarotto-54199a218/" target="_blank">LinkedIn</a></li>
+            <li><a href="https://github.com/RavarottoIvan" target="_blank">GitHub</a></li>
         </ul><br><br><br>
         <pre>Solo HTML, CSS y algo de JavaScript.</pre>
     </footer>
